[package]
name = "ados-compute"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Compute-node engine: a SQLite-backed job store, a queue and scheduler, the reconstructor and perception-offload traits with mock backends, and the master/slave cluster. The heavy-compute substrate a drone or GCS pairs with to run reconstruction and perception offload."

[lib]
name = "ados_compute"
path = "src/lib.rs"

[[bin]]
name = "ados-compute"
path = "src/bin/ados-compute.rs"

[dependencies]
# `tracing-layer` pulls in the LogdLayer so the daemon's logs reach the durable
# ados-logd Black Box store, not just journald (Rule 41).
ados-protocol = { path = "../ados-protocol", features = ["tracing-layer"] }
# The Atlas stream lane: the daemon mounts `atlas_event_router` to receive
# keyframe + capture-state events a drone forwards, and drains them into the job
# queue (the world-model receive side). The bearer half is the air/GS sender.
ados-atlas-transport = { path = "../ados-atlas-transport" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# YAML reader for the `atlas.enabled` gate of /etc/ados/config.yaml, mirroring
# the air-side `ados-atlas` reader's one canonical key (no `system.atlas`).
serde_norway = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-journald = { workspace = true }
# The job API is served on a single TCP listener (loopback until auth ships),
# the same axum-over-tokio surface the logging daemon uses.
tokio = { workspace = true }
axum = { workspace = true }
# The compute-offload client (the agent-side caller of this node's job API).
# Local-first plain HTTP on the LAN; the workspace's reqwest is unified onto the
# no-provider rustls path (ados-cloud), so the client builder calls the shared
# ados_protocol::crypto::ensure_crypto_provider() first or build() panics
# ("No provider set").
reqwest = { version = "0.12", default-features = false, features = ["json"] }
# mDNS advertisement so a compute node auto-appears in the GCS Add-a-Node card
# for LAN pairing (Rule 39) from boot, like a drone/ground-station. The Python
# `ados-discovery` advert is OnDemand (only runs while a pairing code is live),
# so this always-on Rust advert is what makes the node discoverable at boot.
mdns-sd = "0.13"
# Rerun logging SDK, pinned to =0.33.1 to match the GCS web-viewer
# (@rerun-io/web-viewer@0.33.1) exactly: the .rrd encoding carries a version the
# viewer checks, so the writer and the loader share one minor release. Write-only
# feature set — `sdk` gives `RecordingStream` (+ the `.save()` file encoder) and
# the archetypes, with `default-features = false` dropping the viewer
# (egui/wgpu), analytics, the dataframe/mcap importers, and the gRPC server. The
# only added tree is pure-Rust Arrow, no system or GPU dependency.
rerun = { version = "=0.33.1", default-features = false, features = ["sdk"] }
# CORS for the LAN job API + artifact server: the GCS fetches `:8092` directly
# from the browser on an HTTP origin (the proxy is HTTPS-only), so this listener
# needs the same permissive CORS layer ados-control serves on `:8080`.
tower-http = { workspace = true }

[dev-dependencies]
# `ServiceExt::oneshot` drives the router in tests without binding a port.
tower = { workspace = true, features = ["util"] }
# Temp pairing.json files for the auth-gate tests.
tempfile = "3"
axum = { workspace = true }
