[package]
name = "ados-compute"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Compute-node engine: a SQLite-backed job store, a queue and scheduler, the reconstructor and perception-offload traits with mock backends, and the master/slave cluster. The heavy-compute substrate a drone or GCS pairs with to run reconstruction and perception offload."

[lib]
name = "ados_compute"
path = "src/lib.rs"

[[bin]]
name = "ados-compute"
path = "src/bin/ados-compute.rs"

[dependencies]
# `tracing-layer` pulls in the LogdLayer so the daemon's logs reach the durable
# ados-logd Black Box store, not just journald (Rule 41).
ados-protocol = { path = "../ados-protocol", features = ["tracing-layer"] }
# The Atlas stream lane: the daemon mounts `atlas_event_router` to receive
# keyframe + capture-state events a drone forwards, and drains them into the job
# queue (the world-model receive side). The bearer half is the air/GS sender.
ados-atlas-transport = { path = "../ados-atlas-transport" }
# Loud-fail read of the `perception.serving` slice of the agent config (the
# offload-serving toggle + the served detector model).
ados-config = { path = "../ados-config" }
rusqlite = { workspace = true }
# Error glue for the offload stream/bridge modules (the store/scheduler stay on
# the typed ComputeError; the streaming session + return bridge use anyhow).
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# YAML reader for the `atlas.enabled` gate of /etc/ados/config.yaml, mirroring
# the air-side `ados-atlas` reader's one canonical key (no `system.atlas`).
serde_norway = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-journald = { workspace = true }
# The job API is served on a single TCP listener (loopback until auth ships),
# the same axum-over-tokio surface the logging daemon uses.
tokio = { workspace = true }
# `ws` powers the offload detection return stream (node -> drone) served on the
# same axum surface, mirroring the atlas delta lane.
axum = { workspace = true, features = ["ws"] }
# The drone-side offload safety gate: freshness + lock-state so a stale or
# link-lost offloaded detection is treated as lost (stop and hold), never
# extrapolated. Pure logic, no I/O.
ados-offload = { path = "../ados-offload" }
# The drone-side WebSocket client that subscribes to the node's detection
# return stream, and the stream combinator it drives (matching the versions the
# atlas transport lane uses).
tokio-tungstenite = "0.24"
futures-util = "0.3"
# Building the vision.sock publish Envelope (the return bridge republishes an
# offloaded batch onto the drone's local vision.detection bus) and its msgpack.
rmpv = { workspace = true }
rmp-serde = { workspace = true }
# The compute-offload client (the agent-side caller of this node's job API).
# Local-first plain HTTP on the LAN; the workspace's reqwest is unified onto the
# no-provider rustls path (ados-cloud), so the client builder calls the shared
# ados_protocol::crypto::ensure_crypto_provider() first or build() panics
# ("No provider set").
reqwest = { version = "0.12", default-features = false, features = ["json"] }
# mDNS advertisement so a compute node auto-appears in the GCS Add-a-Node card
# for LAN pairing (Rule 39) from boot, like a drone/ground-station. The Python
# `ados-discovery` advert is OnDemand (only runs while a pairing code is live),
# so this always-on Rust advert is what makes the node discoverable at boot.
mdns-sd = "0.13"
# Rerun logging SDK, pinned to =0.33.1 to match the GCS web-viewer
# (@rerun-io/web-viewer@0.33.1) exactly: the .rrd encoding carries a version the
# viewer checks, so the writer and the loader share one minor release. Write-only
# feature set — `sdk` gives `RecordingStream` (+ the `.save()` file encoder) and
# the archetypes, with `default-features = false` dropping the viewer
# (egui/wgpu), analytics, the dataframe/mcap importers, and the gRPC server. The
# only added tree is pure-Rust Arrow, no system or GPU dependency.
rerun = { version = "=0.33.1", default-features = false, features = ["sdk"] }
# CORS for the LAN job API + artifact server: the GCS fetches `:8092` directly
# from the browser on an HTTP origin (the proxy is HTTPS-only), so this listener
# needs the same permissive CORS layer ados-control serves on `:8080`.
tower-http = { workspace = true }
# Total/unified-memory read for the macOS host-GPU block (Apple Silicon shares
# system memory with the GPU). Cross-platform; the GPU identity + utilisation are
# macOS-cfg `system_profiler`/`powermetrics` calls in `gpu.rs`.
sysinfo = { workspace = true }
# The real perception-offload detector: the compute node hosts ados-vision's
# ONNX backend (the same YOLO decode the drone runs on its NPU) so an offloaded
# detection is identical to a local one. Optional + feature-gated so a CPU-only
# CI build (and the mock path) needs no ONNX Runtime; `onnx` pulls it in and
# `coreml` adds the Apple-GPU execution provider for the macOS workstation.
ados-vision = { path = "../ados-vision", optional = true, default-features = false }

[features]
default = []
# Build the real ONNX detector (OnnxDetector) hosted on ados-vision's backend.
onnx = ["dep:ados-vision", "ados-vision/onnx"]
# Register the CoreML execution provider so ONNX inference runs on the Apple GPU
# (macOS workstation). Implies `onnx`.
coreml = ["onnx", "ados-vision/coreml"]

[dev-dependencies]
# `ServiceExt::oneshot` drives the router in tests without binding a port.
tower = { workspace = true, features = ["util"] }
# Temp pairing.json files for the auth-gate tests.
tempfile = "3"
axum = { workspace = true }
# The end-to-end offload SITL gate spins a real vision.sock server backed by a
# VisionEngine, so the return bridge's published batch is asserted on the actual
# drone detection bus. Dev-only + no ONNX so CI needs no model.
ados-vision = { path = "../ados-vision", default-features = false }
