[package]
name = "ados-gpio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Generic GPIO output substrate: drive a status buzzer or LED on a host GPIO line, plus a software-PWM beep pattern. The agent's first hardware-output service, behind a command socket the plugin host forwards to."

[lib]
name = "ados_gpio"
path = "src/lib.rs"

[[bin]]
name = "ados-gpio"
path = "src/bin/ados-gpio.rs"

[dependencies]
# The producer-side log-shipping layer (feature-gated in ados-protocol) feeds
# the logging daemon's ingest socket alongside journald; never on the hot path.
ados-protocol = { path = "../ados-protocol", features = ["tracing-layer"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true }
tracing-journald = { workspace = true }
sd-notify = { workspace = true }
# Pure-Rust character-device GPIO (no libgpiod C dependency), the same backend
# the front-panel button reader uses. Only the chip-open + line-write path is
# target-gated; the PWM/beep timing model and the command parser are
# host-portable and unit-tested without it.
gpio-cdev = "0.6"

[dev-dependencies]
tempfile = "3"
