[package]
name = "ados-hid"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Human-interface devices: touchscreen affine calibration + gesture FSM, the pilot-in-command arbiter FSM + IPC seam, the ados-pic / ados-input daemons, the GPIO front-panel button service, and gamepad enumeration + hotplug."

[lib]
name = "ados_hid"
path = "src/lib.rs"

[[bin]]
name = "ados-pic"
path = "src/bin/ados-pic.rs"

[[bin]]
name = "ados-input"
path = "src/bin/ados-input.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
getrandom = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
time = { version = "0.3", features = ["std", "formatting"] }
serde_norway = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true }
tracing-journald = { workspace = true }
sd-notify = { workspace = true }
# Pure-Rust character-device GPIO (no libgpiod C dependency). Only the
# chip-open + edge-event read path is target-gated; the press classification is
# host-portable and unit-tested without it.
gpio-cdev = "0.6"
# Pure-Rust Linux input (joystick/touch) over the evinput ioctls (built on
# nix/libc, no C build-script). Only the node-open + read path is target-gated;
# the gesture classifier and the gamepad-detection predicate stay host-portable.
evdev = "0.12"

[dev-dependencies]
tempfile = "3"
